--- a/index.html
+++ b/index.html
@@ -9,23 +9,36 @@
     <h1>Cupcakes by Tootsie</h1>
     <h2>Mouthwatering cupcakes for every occasion</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque auctor sapien ligula, a sagittis est imperdiet ut. Proin sit amet commodo tortor, a pretium sapien.</p>
+    <p class="first">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque auctor sapien ligula, a sagittis est imperdiet ut. Proin sit amet commodo tortor, a pretium sapien.</p>
 
     <h3>Options</h3>
     <ul>
-      <li>Special Occasions</li>
-      <li>Catering</li>
-      <li>Tootsie's Favorites</li>
-      <li>Customer Favorites</li>
-      <li>Holiday Cupcakes</li>
-      <li>Weddings</li>
+      <li>Special Occasionsimg
+        <img src="img/purple.jpeg" alt="photo of a purple cupcake">
+      </li>
+
+      <li>Catering
+        <img src="img/sprinkles.jpeg" alt="photo of a sprinkles cupcake">
+      </li>
+      <li>Tootsie's Favorites
+        <img src="img/red-velvet.jpeg" alt="photo of a red-velvet cupcake">
+      </li>
+      <li>Customer Favorites
+        <img src="img/chai-latte.jpeg" alt="photo of a chai-latte">
+      </li>
+      <li>Holiday Cupcakes
+        <img src="img/santa.jpeg" alt="photo of a santa cupcake">
+      </li>
+      <li>Weddings
+        <img src="img/purple.jpeg" alt="photo of a red-valvet cupcake">
+      </li>
     </ul>
 
-    <p>Nullam sem turpis, sollicitudin nec dui vitae, semper luctus erat. Sed ac purus vulputate, aliquam nisi nec, vulputate erat. Integer semper hendrerit diam malesuada pellentesque. Donec non purus id quam imperdiet cursus. Ut hendrerit ut dolor ornare placerat. Praesent eget rhoncus metus. Vivamus vitae sapien cursus, rutrum lacus eu, semper mi.</p>
+    <p class="Mid">Nullam sem turpis, sollicitudin nec dui vitae, semper luctus erat. Sed ac purus vulputate, aliquam nisi nec, vulputate erat. Integer semper hendrerit diam malesuada pellentesque. Donec non purus id quam imperdiet cursus. Ut hendrerit ut dolor ornare placerat. Praesent eget rhoncus metus. Vivamus vitae sapien cursus, rutrum lacus eu, semper mi.</p>
 
-    <p>Nullam vel interdum velit, in pretium ipsum. Duis et ultrices arcu. Vivamus id nisl at sapien imperdiet scelerisque ut ac dolor. Fusce dapibus, mi quis lobortis sagittis, leo ipsum feugiat ante, sagittis ullamcorper dui tortor a sem. Donec tempus magna id tristique scelerisque. Aenean sit amet mattis mi. Sed lectus risus, tempus eu tortor egestas, elementum feugiat elit.</p>
+    <p class="Mid">Nullam vel interdum velit, in pretium ipsum. Duis et ultrices arcu. Vivamus id nisl at sapien imperdiet scelerisque ut ac dolor. Fusce dapibus, mi quis lobortis sagittis, leo ipsum feugiat ante, sagittis ullamcorper dui tortor a sem. Donec tempus magna id tristique scelerisque. Aenean sit amet mattis mi. Sed lectus risus, tempus eu tortor egestas, elementum feugiat elit.</p>
 
-    <p>Praesent porta tristique auctor. Proin tempor lorem a neque convallis tristique. Praesent placerat odio a euismod gravida. Suspendisse lacinia auctor lectus, id vestibulum massa cursus vitae. Aenean aliquam ligula et nulla sodales, nec cursus purus tincidunt. Mauris pretium risus non fermentum faucibus. Phasellus mi quam, tincidunt vitae imperdiet quis, finibus vitae felis. Mauris fermentum felis id lectus varius fringilla. Nunc accumsan eros odio, viverra mollis lacus congue quis.</p>
+    <p class="last">Praesent porta tristique auctor. Proin tempor lorem a neque convallis tristique. Praesent placerat odio a euismod gravida. Suspendisse lacinia auctor lectus, id vestibulum massa cursus vitae. Aenean aliquam ligula et nulla sodales, nec cursus purus tincidunt. Mauris pretium risus non fermentum faucibus. Phasellus mi quam, tincidunt vitae imperdiet quis, finibus vitae felis. Mauris fermentum felis id lectus varius fringilla. Nunc accumsan eros odio, viverra mollis lacus congue quis.</p>
 
   </body>
 </html>
