add style to li/best class

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <li>Catering
         <img src="img/sprinkles.jpeg" alt="photo of a sprinkles cupcake">
       </li>
-      <li>Tootsie's Favorites
-        <img class="best" src="img/red-velvet.jpeg" alt="photo of a red-velvet cupcake">
+      <li class="best">Tootsie's Favorites
+        <img  src="img/red-velvet.jpeg" alt="photo of a red-velvet cupcake">
       </li>
       <li>Customer Favorites
         <img src="img/chai-latte.jpeg" alt="photo of a chai-latte">
